<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MAD WIZUT Widget</string>
    <string name="no_response">no response</string>
    <string name="start_serv">Start useless service</string>
    <string name="stop_serv">Stop useless service</string>
    <string name="start">start parse</string>
    <string name="load_plan_changes">Ładowanie zmian w planie &#8230;</string>
    <string name="no_Internet">Brak połączenia z Internetem</string>
    <string name="plan_changes_Messages">Nie można pobrać wiadomości</string>
    <string name="plan_changes_finished">Zakończono !</string>
    <string name="plan_changes_refreshing_title">Odswieżanie wiadomości</string>
    <string name="refreshing_week_parity_list_title">Odswieżanie listy dni</string>
    <string name="refreshing_body">Proszę czekać &#8230;</string>
    <string name="plan_for">Plan:</string>
    <string name="authors_list">Opiekun koła/Project Manager:\n----------\n dr inż. Radosław Maciaszczyk\n\nProgramiści:\n----------\n- Fabisiak Grzegorz\n- Gliński Dawid\n- Peryt Sebastian\n- Świerczek Sebastian\n- Wojtalewicz Michał</string>
    <string name="no_groups">Brak wybranych grup !</string>
    <string name="ellipsis">&#8230;</string>
    <string name="refresh">Odswież</string>
    <string name="settings">Ustawienia</string>
    <string name="empty">" "</string>
    <string name="no_messages">Brak zmian w planie</string>
    <string name="no_week_parity_list">Brak danych o parzystości dni</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_prefs">Ustawienia widgetu WI ZUT</string>
    <string name="studies_type">Rodzaj studiów:</string>
    <string name="studies_degree">Kierunek_studiów:</string>
    <string name="studies_level">Stopień studiów:</string>
    <string name="studies_year">Rok studiów:</string>
    <string name="studies_group">Grupa:</string>
    <string name="studies_download_grups">Pobierz grupy</string>
    <string name="ok_button">Dalej</string>
    <string name="cancel_button">Anuluj</string>
    <string name="group_settings_title">Ustawienia grupy - Widget WI ZUT</string>
    <string name="menu_info_title">Informacje</string>
    <string name="about_title">O nas</string>
    <string name="logo_description">logo</string>
    <string name="authors">Mobile Applications Developers</string>
    <string name="ok_title">OK</string>
    <string name="cannot_download_groups">Brak grup lub nie można ich pobrać</string>
    <string name="download_groups_title">Pobieranie grup</string>
    <string name="website">www.mad.zut.edu.pl</string>
    <string name="email">e-mail: mad@zut.edu.pl</string>
    <string name="empty_group">brak</string>
    <string name="folder_name">/MAD_Plan_ZUT</string>
    <string name="cannot_download_plan">Nie moża pobrać planu </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_remove_plans">Pobrane plany</string>
    <string name="remove_all_plans">Usuń wszystkie</string>
    <string name="remove_plans_alert_dialog">Usuń plany</string>
    <string name="remove_plans_message">Czy na pewno chcesz usunąć wszystkie plany z dysku?</string>
    <string name="remove_plan_alert_dialog">Usuń plan</string>
    <string name="remove_plan_message">Czy na pewno chcesz usunąć plan z dysku?</string>
    <string name="today">dzisiaj:</string>
    <string name="tomorrow">jutro:</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="cant_download_week_parity_list">Nie można pobrać listy </string>
    <string name="new_week_separator">Nowy tydzień</string>
    <string name="first_day_of_week">poniedziałek</string>

</resources>