<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/authors"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnOkDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/ok_title" />

</RelativeLayout>