<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/pick_studies_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <TextView
            android:id="@+id/txtType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:text="@string/studies_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtType"
            android:entries="@array/list_rodzaj_studiow" />

        <TextView
            android:id="@+id/txtDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinType"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/studies_degree"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtDegree"
            android:entries="@array/list_kierunek_studiow" />

        <TextView
            android:id="@+id/txtLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtDegree"
            android:layout_below="@+id/spinDegree"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/studies_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtLevel"
            android:entries="@array/list_stopien_studiow" />

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinLevel"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/studies_year"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtYear"
            android:entries="@array/list_rok_studiow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btnCancelPrefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/btnNextPrefs"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:text="@string/ok_button" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pic_group_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/pick_studies_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/txtGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/studies_group"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtGroup" />

    </RelativeLayout>

</RelativeLayout>