<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tv_data_next"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_ustawienia"
        android:layout_width="294dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_top"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="90dp"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/tv_tydzien_current"
        android:layout_alignLeft="@+id/tv_ustawienia"
        android:layout_below="@+id/tv_ustawienia"
        android:background="@drawable/background_bottom"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/today"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp" />

    <ImageButton
        android:id="@+id/imb_ustawienia"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/tv_ustawienia"
        android:layout_alignTop="@+id/tv_ustawienia"
        android:layout_marginRight="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings"
        android:scaleType="fitCenter"
        android:src="@drawable/bar_settings"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/imb_odswiez"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tv_ustawienia"
        android:layout_toLeftOf="@+id/imb_ustawienia"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh"
        android:scaleType="centerInside"
        android:src="@drawable/bar_refresh"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_ustawienia"
        android:layout_alignLeft="@+id/tv_ustawienia"
        android:layout_alignRight="@+id/tv_data"
        android:layout_alignTop="@+id/tv_ustawienia"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/tv_tydzien"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_tydzien_current"
        android:layout_toLeftOf="@+id/tv_plan"
        android:layout_toRightOf="@+id/tv_data"
        android:background="@drawable/background_bottom"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_plan"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_above="@+id/tv_zmiany_tytul"
        android:layout_alignRight="@+id/tv_ustawienia"
        android:layout_alignTop="@+id/tv_data"
        android:background="@drawable/background_bottom"
        android:gravity="top|center_horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/plan_for"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/tv_zmiany_tytul"
        android:layout_width="294dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/tv_data"
        android:layout_alignRight="@+id/tv_zmiany_tresc"
        android:layout_below="@+id/tv_tydzien"
        android:background="@drawable/background_listview"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/empty"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_zmiany_tresc"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/tv_data"
        android:layout_below="@+id/tv_zmiany_tytul"
        android:background="@drawable/background_listview"
        android:maxLines="4"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/load_plan_changes"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnPobierzPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_zmiany_tytul"
        android:layout_alignLeft="@+id/tv_plan"
        android:layout_alignRight="@+id/tv_plan"
        android:layout_alignTop="@+id/tv_plan"
        android:layout_margin="2dp"
        android:background="@android:color/transparent"
        android:gravity="bottom|center_horizontal"
        android:text="@string/empty"
        android:textColor="@color/white1"
        android:textSize="21dp" />

    <TextView
        android:id="@+id/tv_tydzien_current"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/tv_tydzien"
        android:layout_below="@+id/tv_ustawienia"
        android:layout_toRightOf="@+id/tv_data"
        android:background="@drawable/background_bottom"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btZmianyPlanu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_zmiany_tresc"
        android:layout_alignLeft="@+id/tv_zmiany_tresc"
        android:layout_alignRight="@+id/tv_zmiany_tytul"
        android:layout_alignTop="@+id/tv_zmiany_tytul"
        android:background="@android:color/transparent"
        android:gravity="right|center_vertical"
        android:text="@string/empty" />

    <LinearLayout
        android:id="@+id/ProgressBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_tydzien_current"
        android:layout_marginBottom="2dp"
        android:layout_toLeftOf="@+id/imb_odswiez"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ProgressBar
            android:id="@+id/progressCircle"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginRight="10dp"
            android:indeterminate="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_data_nastepna"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_above="@+id/tv_zmiany_tytul"
        android:layout_alignLeft="@+id/tv_zmiany_tytul"
        android:layout_alignTop="@+id/tv_tydzien"
        android:layout_toLeftOf="@+id/tv_tydzien"
        android:background="@drawable/background_bottom"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/tomorrow"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnPokazKalendarz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_zmiany_tytul"
        android:layout_alignLeft="@+id/tv_data"
        android:layout_below="@+id/tv_ustawienia"
        android:layout_toLeftOf="@+id/imb_odswiez"
        android:background="@android:color/transparent"
        android:gravity="right|center_vertical"
        android:text="@string/empty" />

</RelativeLayout>